Fix old, buggy code that caused unresponsiveness on mobile

--- a/reminder.css
+++ b/reminder.css
@@ -85,9 +85,6 @@ main > section:hover:nth-of-type(2n) {
 }
 
 .declaration {
-    width: 30rem;
-    height: 6rem;
-
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
